@@ -1,0 +1,35 @@
+A collection of solitaire games, with clear graphics, a simple interface, no fees, and no adverts.
+
+This new app is intended to replace the older solitaire app.
+
+= Why create yet another solitaire app? =
+
+Solitaire games have been around for hundreds of years, and for good reason: they're simple, absorbing and fun to play.
+
+Most people know Klondike, and a few more know Spider or Freecell or Pyramid, but there's a lot more to solitaire than that.
+
+(Klondike is not a very good game, because you have about a 33% chance of winning each game, and that mostly comes down to luck. Contrast that with Freecell; over 99% of games are winnable, and each is won by 99% skill.)
+
+This contains around fifty hand-picked collection of solitaire variations, including:
+
+♥ Accordian ♥ Agnes Bernauer ♥ Agnes Sorel ♥ Alhambra ♥ American Toad ♥ American Westcliff ♥ Assembly ♥ Athena ♥ Australian ♥ Baker's Dozen ♥ Baker's Dozen (Wide) ♥ Baker's Game ♥ Baker's Game Relaxed ♥ Beleaguered Castle ♥ Bisley ♥ Black Hole ♥ Blockade ♥ Canfield ♥ Classic Westcliff ♥ Crimean ♥ Duchess ♥ Easthaven ♥ Eight Off ♥ Eight Off Relaxed ♥ Flat Castle ♥ Forty Thieves ♥ Forty and Eight ♥ Freecell ♥ Gate ♥ Josephine ♥ Klondike ♥ Klondike (Turn Three) ♥ Limited ♥ Little Spider ♥ Lucas ♥ Martha ♥ Penguin ♥ Rainbow Canfield ♥ Red and Black ♥ Rosamund's Bower ♥ Russian ♥ Scorpion ♥ Sea Haven Towers ♥ Simple Simon ♥ Spider ♥ Spider One Suit ♥ Spider Two Suits ♥ Storehouse Canfield ♥ Thirteens ♥ Thoughtful ♥ Tri Peaks ♥ Ukrainian ♥ Wasp ♥ Yukon ♥ Yukon Cells ♥ Yukon Relaxed
+
+Games like Penguin and Simple Simon are really satisfying to win. Give them a go!
+
+= What makes this different from other solitaire games? =
+
+No adverts, no fees, and no spooky permissions.
+
+This solitaire is all about flow. Anything that distracts from your interaction with the flow of the game has been either been tried and removed or not included. "Weniger aber besser" (less but better) as they say in Germany.
+
+Crucially, the default cards are simple and easy to scan; the games can be played by tapping the card you wish to move, and the software figures out where you want the card to go.
+
+Also, the games are authentic, by taking the rules from reputable sources and implementing them exactly.
+
+If your favorite version is not included, email us and tell us why it's your favorite and we'll add it if persuaded.
+
+In any case, send some feedback about what you like and don't like.
+
+= Credits =
+
+Sounds by Victor Vashenko and Kenney.nl
