@@ -18,6 +18,17 @@ ANDROID
 + https://www.solebon.com/
 
 
++ Update Play Store text
+	store listing.md
++ Update Play Store screenshots (power + volume down), phone and tablet
+	phone klondike (full cards)
+	phone menu open over freecell (simple cards)
+	phone stats open over penguin (four colors)
+	phone gate
+	tablet settings open over spider (remove debug first!) landscape
+	tablet > All finder open over tri peaks landscape
+	tablet > All finder open over in-progress yukon portrait
+
 + What's new in version <32>
 
 + landscape and portrait layouts
@@ -28,8 +39,6 @@ ANDROID
 	have aliases for stats so Beleagured Castle and Flat Castle share the same stats
 
 + stats icon with three vertical bars https://old.reddit.com/r/solitaire/comments/u7e0z7/this_one_is_killing_me/
-+ gradient on baize https://old.reddit.com/r/solitaire/comments/u7e0z7/this_one_is_killing_me/
-	https://angrytools.com/gradient/
 
 + penguin foundation at top https://old.reddit.com/r/solitaire/comments/u7e0z7/this_one_is_killing_me/
 
