@@ -48,8 +48,8 @@ function TriPeaks:buildPiles()
 		Reserve.new({x=x, y=3, fanType='FAN_NONE', moveType='MOVE_ONE', nodraw=true})
 	end
 
-	self.stock = Stock.new({x=5, y=5})
-	self.foundation = Foundation.new({x=6, y=5, fanType='FAN_NONE'})
+	self.stock = Stock.new({x=5, y=4.5})
+	self.foundation = Foundation.new({x=6, y=4.5, fanType='FAN_NONE'})
 	self.tableaux = _G.BAIZE.reserves
 end
 
